[package]
name = "image-browser"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["image"] }
rfd = "0.15.4"
dirs = "5.0"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
resize = "0.8.8"
bytemuck = { version = "1.16", features = ["derive"] }
rgb = "0.8.52"
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }
